# opportunibot

./: .gitignore  CHANGELOG.md  README.md  commit_script.sh  debug_api_directly.py  debug_parsing_issue.py  errors.txt  find_greenhouse_companies.py  log.txt  pyproject.toml  test_greenhouse.sh  warnings.txt  which_jobs_are_actually_being_found.py
src/opportunibot/: __init__.py  __main__.py  config.py  greenhouse_scraper.py  indeed_scraper.py  lever_scraper.py  main.py  models.py  scrapers.py  search_engine.py
tests/: __init__.py  conftest.py
