[project]
name = "opportunibot"
version = "0.2.1"
description = "AI-powered job search automation tool"
authors = [
    {name = "Your Name",email = "lina.faller@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "lxml (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
